Rich: Fix Dark Mode.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,16 +11,4 @@ html, body {
         background-color: black;
         color: white;
     }
-
-    a {
-        color: white;
-    }
-
-    a:visited {
-        color: white;
-    }
-
-    a:hover {
-        color: yellow;
-    }
 }
